Fixed grid spacing

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ button {
     grid-row-end: 1;
     /* GRID STYLE */
     display: grid;
+    grid-auto-rows: 51px;
     grid-template-areas: "h h h" "h h h" "h h h";
 }
 
@@ -51,7 +52,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 1;
     grid-column-end: 1;
@@ -63,7 +63,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 2;
     grid-column-end: 2;
@@ -75,7 +74,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 3;
     grid-column-end: 3;
@@ -90,7 +88,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 1;
     grid-column-end: 1;
@@ -102,7 +99,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 2;
     grid-column-end: 2;
@@ -114,7 +110,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 3;
     grid-column-end: 3;
@@ -129,7 +124,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 1;
     grid-column-end: 1;
@@ -141,7 +135,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 2;
     grid-column-end: 2;
@@ -153,7 +146,6 @@ button {
     z-index: 1;
     visibility: hidden;
     display: block;
-    border: orange dotted 1px;
     width: 51px;
     grid-column-start: 3;
     grid-column-end: 3;
